# jobfinder_rust

./: .env  Cargo.toml  README.md  database.sql
src/: api_client.rs  database.rs  handlers.rs  linkedin_client.rs  main.rs  models.rs  openai_client.rs
templates/: index.html  job.html  jobs.html  resume.html
